--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.5.0",
-    "prisma": "^5.18.0",
+    "prisma": "^5.19.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
     "body-parser": "^1.20.2",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "node": "^22.7.0",
