--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "author": "plumbum",
@@ -24,6 +24,7 @@
     "crypto": "^1.0.1",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "node": "^22.7.0",
@@ -34,6 +35,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "random-words": "^2.0.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "supertest": "^7.0.0"
   }
 }
