--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "jest": "^29.7.0",
