--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
+    "@googleapis/calendar": "^9.8.0",
+    "@googleapis/docs": "^3.3.0",
     "@prisma/client": "^6.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
