--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "googleapis": "^148.0.0",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "jsonwebtoken": "^9.0.2",
@@ -40,6 +41,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "random-words": "^2.0.1",
+    "resend": "^4.2.0",
     "socket.io": "^4.8.1",
     "supertest": "^7.0.0"
   }
