--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
+    "@google-cloud/local-auth": "^2.1.0",
     "@googleapis/calendar": "^9.8.0",
     "@googleapis/docs": "^3.3.0",
     "@prisma/client": "^6.10.1",
@@ -28,7 +29,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
-    "googleapis": "^148.0.0",
+    "googleapis": "^105.0.0",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "jsonwebtoken": "^9.0.2",
