--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.7",
     "mongodb": "^6.17.0",
     "node": "^22.7.0",
     "node-cron": "^3.0.3",
