--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@googleapis/calendar": "^9.8.0",
     "@googleapis/docs": "^3.3.0",
     "@prisma/client": "^6.18.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-session": "^2.1.0",
@@ -29,6 +30,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "firebase": "^12.4.0",
     "googleapis": "^105.0.0",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
