--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jwk-to-pem": "^2.0.7",
     "mongodb": "^6.17.0",
     "node": "^22.7.0",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
