login register flow

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@googleapis/calendar": "^9.8.0",
     "@googleapis/docs": "^3.3.0",
     "@prisma/client": "^6.18.0",
+    "algoliasearch": "^5.41.0",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
