--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "firebase": "^12.4.0",
+    "firebase-functions": "^7.0.0",
     "googleapis": "^105.0.0",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
